--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    background-color: #DDD;
+.gradient {
+    background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
 }
