--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.gradient {
-    background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+body {
+    --tw-bg-opacity: 1;
+    background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
