feat: 회원가입 실패 시 입력창에 오류 메시지 출력

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,8 @@ body {
     --tw-bg-opacity: 1;
     background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px white inset;
+    box-shadow: 0 0 0 1000px white inset;
+}
